# pid-project

./: .gitignore  LICENSE  README.md
.github/: pull_request_template.md
src/bringup_robot/: CMakeLists.txt  package.xml
src/bringup_robot/config/: display.rviz
src/bringup_robot/frame/: frames_2026-01-15_18.10.38.gv
src/bringup_robot/launch/: robot.launch.py
src/bringup_robot/urdf/: control_interface.xacro  exo_model.xacro.urdf
src/exo_controller/: CMakeLists.txt  exo_controller_plugins.xml  package.xml
src/exo_controller/include/exo_controller/: exo_controller.hpp
src/exo_controller/src/: exo_controller.cpp
src/exo_msgs/: CMakeLists.txt  package.xml
src/exo_msgs/msg/: Intent.msg  State.msg
src/input_mapper/: CMakeLists.txt  package.xml
src/input_mapper/include/input_mapper/: input_mapper.hpp
src/input_mapper/src/: input_mapper.cpp
src/mujoco_ros2_control/mujoco/mujoco-3.4.0/: THIRD_PARTY_NOTICES
src/mujoco_ros2_control/mujoco/mujoco-3.4.0/wasm/: mujoco_wasm.wasm.map  mujoco_wasm_benchmark.js  mujoco_wasm_benchmark.wasm  mujoco_wasm_benchmark.wasm.map
src/ps_ros2_common/: CMakeLists.txt
src/ps_ros2_common/src/: example_joy.cpp
src/state_estimator/: CMakeLists.txt  package.xml
src/state_estimator/include/state_estimator/: state_estimator.hpp
src/state_estimator/src/: state_estimator.cpp
